# convention2023

./: .gitignore  README.md  pyproject.toml  start.http
designer/: Carrier.ftm
frontend/: package.json
frontend/src/: app.html
frontend/src/lib/: Empty.svelte  LoginOverlay.svelte  api.ts  endpoints.d.ts  notify.ts  poll.ts
frontend/src/lib/nav/: Navigation.svelte  SystemInfo.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  LastRuns.svelte  Pipelines.svelte
frontend/src/routes/pipelines/cutting/[id]/: +page.svelte  +page.ts
frontend/src/routes/pipelines/new/: +page.svelte  +page.ts
frontend/src/routes/pipelines/prepare/[id]/[environment]/: +page.svelte  +page.ts
frontend/src/routes/pipelines/prepare/[id]/test/: +page.svelte
frontend/src/routes/pipelines/process/[id]/: +page.svelte  +page.ts
frontend/src/routes/wizard/: +page.svelte
scanner_natives/sketch/: platformio.ini
scanner_natives/sketch/src/: TCA9548A.cpp  main.cpp
src/bootstrap/: __init__.py
src/scanner/: __init__.py
src/server/: __init__.py  utils.py
src/server/cv/: utils.py
src/server/datastore/: __init__.py  enum.py  file.py
src/server/driver/: __init__.py  command.py  driver_provider.py  driver_test.py  io.py
src/server/linalg/: Vecmath.py
src/server/routes/: __init__.py  auth.py  pipeline.py  scan.py
src/server/routes/pipeline/: __init__.py
src/server/tasks/cut/: __init__.py  ct.py
src/server/tasks/process/: __init__.py  ply_export.py  test.py
src/server/tasks/process/stages/: find_line.py
src/server/tasks/scan/: __init__.py  scanner.py
src/server/tasks/scan/machine/: __init__.py
src/server/tasks/scan/test/: __init__.py
src/server/tasks/slice/: __init__.py  emulator.py  pyStl.py
src/server/utils/: __init__.py  asynctasks.py
src/swarm/: __init__.py  swarm.py
testdata/scanner/: test_image_generator.blend
